<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="6dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="15dp"

    >

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="top|end"
        android:layout_marginTop="160dp"
        android:background="@color/colorPrimary"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_local_phone_black_24dp"
        android:id="@+id/call"/>


    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:background="#fff"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#fff"

            >




            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/bigPostRoomImage"
                android:src="@drawable/roommenu"
                android:scaleType="fitXY"


                />




            <Button
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/profileback"
                android:layout_marginTop="120dp"
                android:id="@+id/gotoprofile1"
                android:layout_marginStart="10dp"


                />
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/bigPostProfileimage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:civ_border_width="6dp"
                app:civ_border_color="#FFF"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"

                />






            <TextView
                android:id="@+id/BPname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_below="@+id/bigPostRoomImage"

                />





            <ScrollView
                android:layout_width="355dp"
                android:layout_height="430dp"
                android:layout_below="@+id/BPname"
                android:layout_marginTop="10dp"
                android:id="@+id/scroll1"
                >



                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    >



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:id="@+id/lin1"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/movin"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Move_in"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/date"
                            android:textSize="16sp"
                            android:id="@+id/date"
                            android:textColor="@color/colordetails"


                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin1"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lin2"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/money"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deposit"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            android:layout_marginStart="10dp"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/cost"
                            android:textSize="16sp"
                            android:id="@+id/cost"
                            android:textColor="@color/colordetails"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin2"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lin3"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/location1"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/city"
                            android:textSize="16sp"
                            android:id="@+id/BPlocation"
                            android:textColor="@color/colordetails"

                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin3"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lin4"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/numroomats"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Number_roomats"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/number"
                            android:textSize="16sp"
                            android:textColor="@color/colordetails"
                            android:id="@+id/BProomats"


                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin4"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lin5"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/numrooms"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Rooms"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/number"
                            android:textSize="16sp"
                            android:id="@+id/BProoms"
                            android:textColor="@color/colordetails"

                            />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin5"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lin6"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/floor"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Floor"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/number"
                            android:textSize="16sp"
                            android:id="@+id/Bpfloor"
                            android:textColor="@color/colordetails"


                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin6"
                        android:layout_marginTop="10dp"
                        android:id="@+id/lin7"
                        >
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_info_outline_black_24dp"
                            android:layout_marginStart="10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Description"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            />




                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="43dp"
                        android:layout_below="@+id/lin7"
                        android:textColor="@color/colordetails"
                        android:textSize="16sp"
                        android:hint="@string/enter_more"
                        android:maxLines="5"
                        android:id="@+id/BPinformation"

                        />




                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>